// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly with a single children prop 1`] = `
<div
  className="sc-iyvyFf gFhKYN StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <div
    className="sc-chPdSV GFDdw sc-kAzzGY dLnIPy"
  >
    <div
      className="sc-hZSUBg eoZWeN sc-bsbRJL tKRUY"
    >
      <div
        className="sc-kgoBCf kqLfuS sc-chPdSV jpfrZo sc-kAzzGY dLnIPy"
      >
        <div
          className="sc-kgoBCf cRCsAq sc-chPdSV jpfrZo sc-kAzzGY dLnIPy"
        >
          <div
            className="sc-cMhqgX kOxYlb sc-chPdSV gwIGaM sc-kAzzGY dLnIPy"
          />
          <div
            className="sc-iuJeZd bLYkWY sc-chPdSV yrOiB sc-kAzzGY dLnIPy"
            display={
              Array [
                "block",
                "none",
              ]
            }
            onClick={[Function]}
          >
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m3.4 9.1h33.2v3.4h-33.2v-3.4z m0 8.4h33.2v3.4h-33.2v-3.4z m0 8.4h33.2v3.2h-33.2v-3.2z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="sc-kgoBCf sc-esOvli jSeSux sc-chPdSV jgcBzP sc-kAzzGY dLnIPy"
        >
          <div
            className="sc-kgoBCf kqLfuS sc-chPdSV kDIXHv sc-kAzzGY dLnIPy"
          >
            <div
              className="sc-chPdSV kDQfPd sc-kAzzGY dLnIPy"
              onClick={[Function]}
            >
              <a
                className="sc-gZMcBi krgeid sc-iwsKbI jkCyoU"
                color="white"
                href="/docs/"
              >
                Docs
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar renders correctly with more than one children prop 1`] = `
<div
  className="sc-iyvyFf gFhKYN StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <div
    className="sc-chPdSV GFDdw sc-kAzzGY dLnIPy"
  >
    <div
      className="sc-hZSUBg eoZWeN sc-bsbRJL tKRUY"
    >
      <div
        className="sc-kgoBCf kqLfuS sc-chPdSV jpfrZo sc-kAzzGY dLnIPy"
      >
        <div
          className="sc-kgoBCf cRCsAq sc-chPdSV jpfrZo sc-kAzzGY dLnIPy"
        >
          <div
            className="sc-cMhqgX kOxYlb sc-chPdSV gwIGaM sc-kAzzGY dLnIPy"
          />
          <div
            className="sc-iuJeZd bLYkWY sc-chPdSV yrOiB sc-kAzzGY dLnIPy"
            display={
              Array [
                "block",
                "none",
              ]
            }
            onClick={[Function]}
          >
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m3.4 9.1h33.2v3.4h-33.2v-3.4z m0 8.4h33.2v3.4h-33.2v-3.4z m0 8.4h33.2v3.2h-33.2v-3.2z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="sc-kgoBCf sc-esOvli jSeSux sc-chPdSV jgcBzP sc-kAzzGY dLnIPy"
        >
          <div
            className="sc-kgoBCf kqLfuS sc-chPdSV kDIXHv sc-kAzzGY dLnIPy"
          >
            <div
              className="sc-chPdSV kDQfPd sc-kAzzGY dLnIPy"
              onClick={[Function]}
            >
              <a
                className="sc-gZMcBi krgeid sc-iwsKbI jkCyoU"
                color="white"
                href="/docs/"
              >
                Docs
              </a>
            </div>
            <div
              className="sc-chPdSV kDQfPd sc-kAzzGY dLnIPy"
              onClick={[Function]}
            >
              <a
                className="sc-gZMcBi krgeid sc-iwsKbI jkCyoU"
                color="white"
                href="/changelog/"
              >
                changelog
              </a>
            </div>
            <div
              className="sc-chPdSV kDQfPd sc-kAzzGY dLnIPy"
              onClick={[Function]}
            >
              <a
                className="sc-gZMcBi krgeid sc-iwsKbI jkCyoU"
                color="white"
                href="/gitter/"
              >
                gitter
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar renders correctly with no children prop 1`] = `
<div
  className="sc-iyvyFf gFhKYN StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <div
    className="sc-chPdSV GFDdw sc-kAzzGY dLnIPy"
  >
    <div
      className="sc-hZSUBg eoZWeN sc-bsbRJL tKRUY"
    >
      <div
        className="sc-kgoBCf kqLfuS sc-chPdSV jpfrZo sc-kAzzGY dLnIPy"
      >
        <div
          className="sc-kgoBCf cRCsAq sc-chPdSV jpfrZo sc-kAzzGY dLnIPy"
        >
          <div
            className="sc-cMhqgX kOxYlb sc-chPdSV gwIGaM sc-kAzzGY dLnIPy"
          />
          <div
            className="sc-iuJeZd bLYkWY sc-chPdSV yrOiB sc-kAzzGY dLnIPy"
            display={
              Array [
                "block",
                "none",
              ]
            }
            onClick={[Function]}
          >
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m3.4 9.1h33.2v3.4h-33.2v-3.4z m0 8.4h33.2v3.4h-33.2v-3.4z m0 8.4h33.2v3.2h-33.2v-3.2z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="sc-kgoBCf sc-esOvli jSeSux sc-chPdSV jgcBzP sc-kAzzGY dLnIPy"
        />
      </div>
    </div>
  </div>
</div>
`;
